поменял систему сборки все работотает

--- a/assets/index.html
+++ b/assets/index.html
@@ -9,7 +9,7 @@
 <!--    <link href="dist/main.css" rel="stylesheet">-->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-    <script src="./dist/bundle.js"></script>
+    <script src="./index.js"></script>
     <title>Полеты на воздушном шаре - стоимость, фото | Легкие люди</title>
 </head>
 <body>
@@ -40,7 +40,7 @@
                 <li><a href="#contact">- КОНТАКТЫ </a></li>
             </ul>
             <div class="wrap">
-                <img src="dist/img/phone_icon.png" alt="">
+                <img src="./img/phone_icon.png" alt="">
                 <div class="phone"><span>+7 903 326 5550</span></div>
             </div>
         </div>
@@ -122,28 +122,28 @@
     <section class="gallery">
         <h2 id="gallery">ФОТО ПОЛЕТОВ</h2>
         <div class="row">
-            <a href="dist/img/Gallery/Full/1.jpg" data-lightbox="roadtrip"><img class="col" src="./img/Gallery/Preview/1.jpg" alt=""></a>
-            <a href="dist/img/Gallery/Full/2.jpg" data-lightbox="roadtrip"><img class="col" src="./img/Gallery/Preview/2.jpg" alt=""></a>
-            <a href="dist/img/Gallery/Full/3.jpg" data-lightbox="roadtrip"><img class="col" src="./img/Gallery/Preview/3.jpg" alt=""></a>
-            <a href="dist/img/Gallery/Full/4.jpg" data-lightbox="roadtrip"><img class="col" src="./img/Gallery/Preview/4.jpg" alt=""></a>
-            <a href="dist/img/Gallery/Full/5.jpg" data-lightbox="roadtrip"><img class="col" src="./img/Gallery/Preview/5.jpg" alt=""></a>
-            <a href="dist/img/Gallery/Full/6.jpg" data-lightbox="roadtrip"><img class="col" src="./img/Gallery/Preview/6.jpg" alt=""></a>
+            <a href="./img/Gallery/Full/1.jpg" data-lightbox="roadtrip"><img class="col" src="./img/Gallery/Preview/1.jpg" alt=""></a>
+            <a href="./img/Gallery/Full/2.jpg" data-lightbox="roadtrip"><img class="col" src="./img/Gallery/Preview/2.jpg" alt=""></a>
+            <a href="./img/Gallery/Full/3.jpg" data-lightbox="roadtrip"><img class="col" src="./img/Gallery/Preview/3.jpg" alt=""></a>
+            <a href="./img/Gallery/Full/4.jpg" data-lightbox="roadtrip"><img class="col" src="./img/Gallery/Preview/4.jpg" alt=""></a>
+            <a href="./img/Gallery/Full/5.jpg" data-lightbox="roadtrip"><img class="col" src="./img/Gallery/Preview/5.jpg" alt=""></a>
+            <a href="./img/Gallery/Full/6.jpg" data-lightbox="roadtrip"><img class="col" src="./img/Gallery/Preview/6.jpg" alt=""></a>
         </div>
         <div class="row">
-            <a href="dist/img/Gallery/Full/7.jpg" data-lightbox="roadtrip"><img class="col" src="dist/img/Gallery/Preview/8.jpg" alt=""></a>
-            <a href="dist/img/Gallery/Full/8.jpg" data-lightbox="roadtrip"><img class="col" src="dist/img/Gallery/Preview/7.jpg" alt=""></a>
-            <a href="dist/img/Gallery/Full/9.jpg" data-lightbox="roadtrip"><img class="col" src="dist/img/Gallery/Preview/9.jpg" alt=""></a>
-            <a href="dist/img/Gallery/Full/10.jpg" data-lightbox="roadtrip"><img class="col" src="dist/img/Gallery/Preview/10.jpg" alt=""></a>
-            <a href="dist/img/Gallery/Full/11.jpg" data-lightbox="roadtrip"><img class="col" src="dist/img/Gallery/Preview/11.jpg" alt=""></a>
-            <a href="dist/img/Gallery/Full/12.jpg" data-lightbox="roadtrip"><img class="col" src="dist/img/Gallery/Preview/12.jpg" alt=""></a>
+            <a href="./img/Gallery/Full/7.jpg" data-lightbox="roadtrip"><img class="col" src="./img/Gallery/Preview/8.jpg" alt=""></a>
+            <a href="./img/Gallery/Full/8.jpg" data-lightbox="roadtrip"><img class="col" src="./img/Gallery/Preview/7.jpg" alt=""></a>
+            <a href="./img/Gallery/Full/9.jpg" data-lightbox="roadtrip"><img class="col" src="./img/Gallery/Preview/9.jpg" alt=""></a>
+            <a href="./img/Gallery/Full/10.jpg" data-lightbox="roadtrip"><img class="col" src="./img/Gallery/Preview/10.jpg" alt=""></a>
+            <a href="./img/Gallery/Full/11.jpg" data-lightbox="roadtrip"><img class="col" src="./img/Gallery/Preview/11.jpg" alt=""></a>
+            <a href="./img/Gallery/Full/12.jpg" data-lightbox="roadtrip"><img class="col" src="./img/Gallery/Preview/12.jpg" alt=""></a>
         </div>
         <div class="row">
-            <a href="dist/img/Gallery/Full/13.jpg" data-lightbox="roadtrip"><img class="col" src="dist/img/Gallery/Preview/13.jpg" alt=""></a>
-            <a href="dist/img/Gallery/Full/14.jpg" data-lightbox="roadtrip"><img class="col" src="dist/img/Gallery/Preview/14.jpg" alt=""></a>
-            <a href="dist/img/Gallery/Full/15.jpg" data-lightbox="roadtrip"><img class="col" src="dist/img/Gallery/Preview/15.jpg" alt=""></a>
-            <a href="dist/img/Gallery/Full/16.jpg" data-lightbox="roadtrip"><img class="col" src="dist/img/Gallery/Preview/16.jpg" alt=""></a>
-            <a href="dist/img/Gallery/Full/17.jpg" data-lightbox="roadtrip"><img class="col" src="dist/img/Gallery/Preview/17.jpg" alt=""></a>
-            <a href="dist/img/Gallery/Full/18.jpg" data-lightbox="roadtrip"><img class="col last768" src="dist/img/Gallery/Preview/18.jpg" alt=""></a>
+            <a href="./img/Gallery/Full/13.jpg" data-lightbox="roadtrip"><img class="col" src="./img/Gallery/Preview/13.jpg" alt=""></a>
+            <a href="./img/Gallery/Full/14.jpg" data-lightbox="roadtrip"><img class="col" src="./img/Gallery/Preview/14.jpg" alt=""></a>
+            <a href="./img/Gallery/Full/15.jpg" data-lightbox="roadtrip"><img class="col" src="./img/Gallery/Preview/15.jpg" alt=""></a>
+            <a href="./img/Gallery/Full/16.jpg" data-lightbox="roadtrip"><img class="col" src="./img/Gallery/Preview/16.jpg" alt=""></a>
+            <a href="./img/Gallery/Full/17.jpg" data-lightbox="roadtrip"><img class="col" src="./img/Gallery/Preview/17.jpg" alt=""></a>
+            <a href="./img/Gallery/Full/18.jpg" data-lightbox="roadtrip"><img class="col last768" src="./img/Gallery/Preview/18.jpg" alt=""></a>
         </div>
     </section>
     <div class="wrap-video">
