не работают фото из индекса

--- a/assets/index.html
+++ b/assets/index.html
@@ -6,10 +6,9 @@
     <meta name="description" content="Закажите безопасный часовой полет на воздушном шаре в Йошкар-Оле, Казани и Чебоксарах по отличной цене!">
     <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" rel="stylesheet"> -->
-<!--    <link href="dist/main.css" rel="stylesheet">-->
+<!--    <link href="scss/main.scss" rel="stylesheet">-->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-    <script src="./index.js"></script>
     <title>Полеты на воздушном шаре - стоимость, фото | Легкие люди</title>
 </head>
 <body>
@@ -184,16 +183,24 @@
                 <div class="text-block">
                     <h2 id="howmatch">стоимость полета на воздушном шаре</h2>
                     <p><b>Для того чтобы совершить полет, нужно приобрести сертификат на полет. Выберите один из трех номиналов сертификата, который подходит именно вам:</b></p>
-                    <p>Бронзовый – одно место, групповой часовой полет. С вами в корзине будут другие хорошие люди.</p>
-                    <p class="not-top">Стоимость  для детей 7-14 лет – 3500 р., для взрослых – 7000 р.</p>
-                    <button class="bronz">КУПИТЬ БРОНОЗОВЫЙ СЕРТИФИКАТ</button>
+                    <p>Экстрим – часовой индивидуальный полет для одного человека на спортивном аэростате.</p>
+                    <p class="not-top">Стоимость – 17 000 р.</p>
+                    <button class="bronze">КУПИТЬ ЭКСТРИМ СЕРТИФИКАТ</button>
                     <p>Серебряный – индивидуальный часовой полет на двоих для настоящих романтиков!</p>
-                    <p class="not-top">Стоимость – 17000 р. (за двоих)</p>
-                    <button class="silver">КУПИТЬ СЕРЕБРЯНЫЙ СЕРТИФИКАТ</button>
-                    <p>Золотой – часовой полет с полной загрузкой корзины (3-4 человека, в зависимости от веса пассажиров). Отличный вариант для семейных полетов.</p>
-                    <p class="not-top">Стоимость – 20000 р. (аренда всей корзины на час)</p>
+                    <p class="not-top">Стоимость – 25 000 р. (за двоих)</p>
+                    <button class="silver">КУПИТЬ СЕРЕБРЯНЫЙ СЕРТИФИКАТ</button>                    <p>Золотой – часовой полет для троих людей. Отличный вариант для семейных полетов.</p>
+                    <p class="not-top">Стоимость –  29 000 р. (аренда всей корзины на час)</p>
                     <button class="gold">КУПИТЬ ЗОЛОТОЙ СЕРТИФИКАТ</button>
-                    <p><span class="warning">Важно!</span> Приобретая бронзовый, серебряный или золотой сертификат, вы подтвержтаете, что ознакомлены и согласны с <a class="regulations" href="tipovoy_dogovor.doc" target="blanck" >правилами</a> его использования.</p>
+                    <p>Платиновый – часовой полет для четверых людей. Отличный вариант для семейных полетов тоже:)</p>
+                    <p class="not-top">Стоимость – 32 000 р. (аренда всей корзины на час)</p>
+                    <button class="platina">КУПИТЬ ПЛАТИНОВЫЙ СЕРТИФИКАТ</button>
+                    <p>Бриллиантовый – часовой полет для шестерых людей.</p>
+                    <p class="not-top">Стоимость – 48 000 р. (аренда всей корзины на час)</p>
+                    <button class="diamond">КУПИТЬ БРИЛИАНТОВЫЙ СЕРТИФИКАТ</button>
+                    <p>Бриллиантовый – часовой полет на 12 человек.</p>
+                    <p class="not-top">Стоимость – 72 000 р. (аренда всей корзины на час)</p>
+                    <button class="corporat">КУПИТЬ КОРПОРАТИВНЫЙ СЕРТИФИКАТ</button>
+                    <p><span class="warning">Важно!</span> Приобретая серебряный или золотой сертификат, вы подтвержтаете, что ознакомлены и согласны с <a class="regulations" href="tipovoy_dogovor.doc" target="blanck" >правилами</a> его использования.</p>
                     <p><b>Дарите эмоции – это бесценно!</b></p>
                 </div>
             </div>
@@ -208,48 +215,61 @@
             <p>Небо ждет Вас! Затаите дыхание...</p>
             <ul>
                 <li class='vk'><a href="http://vk.com/legkie_lyudi" target="_blanck">        vk.com/legkie_lyudi</a></li>
-                <li class='phone'><a href="">  (8362) 36-05-36, +7 903 326 5550</a></li>
-                <li class='mail'><a href="">    midibriy@gmail.com</a></li>
+                <li class='phone'><a href=""> 📱8(8362)330-444 Йошкар-Ола
+                    📱+79379300215 Чебоксары
+                    📱+79221423722 Казань</a></li>
+                <li class='mail'><a href="">    midobriy@gmail.com</a></li>
                 <li class='insta'><a href="http://instagram.com/ll12ru/" target="_blanck">  @ll12ru</a></li>
             </ul>
-            <div class="copirate">ООО "Клуб воздухоплавателей "Легкие люди" / ОГРН 1141215009286 / ИНН 1215185402 / КПП 121501001 / г. Йошкар-Ола, ул. Соловьева 22А к 1 / Тел.: 8(362)36-05-36</div>
+            <div class="copirate">ООО "Клуб воздухоплавателей "Легкие люди" / ОГРН 1141215009286 / ИНН 1215185402 / КПП 121501001 / г. Йошкар-Ола, переулок Ладыгина д.6 / Тел.: +7 (922) 142 37 22 </div>
         </div>
     </footer>
     </div>
     <div class="hidden">
-    <center>
-        <form name="33948_buyNow_simple_button" id="33948_buyNow_simple_button" action="https://www.moneta.ru/shopping-81782180.htm" target="_blank" method="post">
-        <fieldset>
-        <input type="hidden" name="MNT_ITEM_ID" value="33948">
-        <input type="hidden" name="MNT_QUANTITY" value="1">
-        <input type="submit" value="Бронзовый сертификат">
-        <!-- дополнительные параметры -->
-        </fieldset>
-        </form>
+        <center>
 
-        <form name="33947_buyNow_simple_button" id="33947_buyNow_simple_button" action="https://www.moneta.ru/shopping-81782180.htm" target="_blank" method="post">
-        <fieldset>
-        <input type="hidden" name="MNT_ITEM_ID" value="33947">
-        <input type="hidden" name="MNT_QUANTITY" value="1">
-        <input type="submit" value="Серебряный сертификат">
-        <!-- дополнительные параметры -->
-        </fieldset>
-        </form>
+            <form name="33947_buyNow_simple_button" id="33947_buyNow_simple_button" action="https://www.moneta.ru/shopping-81782180.htm" target="_blank" method="post">
+                <fieldset>
+                    <input type="hidden" name="MNT_ITEM_ID" value="33947">
+                    <input type="hidden" name="MNT_QUANTITY" value="1">
+                    <input type="submit" value="Серебряный сертификат">
+                    <!-- дополнительные параметры -->
+                </fieldset>
+            </form>
 
-        <form name="33946_buyNow_simple_button" id="33946_buyNow_simple_button" action="https://www.moneta.ru/shopping-81782180.htm" target="_blank" method="post">
-        <fieldset>
-        <input type="hidden" name="MNT_ITEM_ID" value="33946">
-        <input type="hidden" name="MNT_QUANTITY" value="1">
-        <input type="submit" value="Золотой сертификат">
-        <!-- дополнительные параметры -->
-        </fieldset>
-        </form>
+            <form name="33946_buyNow_simple_button" id="33946_buyNow_simple_button" action="https://www.moneta.ru/shopping-81782180.htm" target="_blank" method="post">
+                <fieldset>
+                    <input type="hidden" name="MNT_ITEM_ID" value="33946">
+                    <input type="hidden" name="MNT_QUANTITY" value="1">
+                    <input type="submit" value="Золотой сертификат">
+                    <!-- дополнительные параметры -->
+                </fieldset>
+            </form>
 
-  </center>
+            <form name="33948_buyNow_simple_button" id="33948_buyNow_simple_button" action="https://www.moneta.ru/shopping-96412551.htm" target="_blank" method="post">
+                <fieldset>
+                    <input type="hidden" name="MNT_ITEM_ID" value="33948" />
+                    <input type="hidden" name="MNT_QUANTITY" value="1" />
+                    <input type="submit" value="ЭКСТРИМ" />
+                    <!-- дополнительные параметры -->
+                </fieldset>
+            </form>
+            <form name="39516_buyNow_simple_button" id="39516_buyNow_simple_button" action="https://www.moneta.ru/shopping-96412551.htm" target="_blank" method="post">
+                <fieldset>
+                    <input type="hidden" name="MNT_ITEM_ID" value="39516" />
+                    <input type="hidden" name="MNT_QUANTITY" value="1" />
+                    <input type="submit" value="Купить" />
+
+                </fieldset>
+            </form>
+
+        </center>
     </div>
 <!--    <link rel="stylesheet" href="scss/css/lightbox.min.css">-->
 <!--    <script src="dist/js/lightbox.min.js"></script>-->
 <!--    <script src="dist/js.js"></script>-->
     <!-- created by vk.com/id17493517 -->
+    <script src="./index.js"></script>
 </body>
+
 </html>
