--- a/assets/index.html
+++ b/assets/index.html
@@ -181,11 +181,11 @@
         <div class="how-match">
             <div class="back">
                 <div class="text-block">
-                    <h2 id="howmatch">стоимость полета на воздушном шаре</h2>
-                    <p><b>Для того чтобы совершить полет, нужно приобрести сертификат на полет. Выберите один из трех номиналов сертификата, который подходит именно вам:</b></p>
-                    <p>Экстрим – часовой индивидуальный полет для одного человека на спортивном аэростате.</p>
-                    <p class="not-top">Стоимость – 17 000 р.</p>
-                    <button class="bronze">КУПИТЬ ЭКСТРИМ СЕРТИФИКАТ</button>
+<!--                    <h2 id="howmatch">стоимость полета на воздушном шаре</h2>-->
+<!--                    <p><b>Для того чтобы совершить полет, нужно приобрести сертификат на полет. Выберите один из трех номиналов сертификата, который подходит именно вам:</b></p>-->
+<!--                    <p>Экстрим – часовой индивидуальный полет для одного человека на спортивном аэростате.</p>-->
+<!--                    <p class="not-top">Стоимость – 17 000 р.</p>-->
+<!--                    <button class="bronze">КУПИТЬ ЭКСТРИМ СЕРТИФИКАТ</button>-->
                     <p>Серебряный – индивидуальный часовой полет на двоих для настоящих романтиков!</p>
                     <p class="not-top">Стоимость – 25 000 р. (за двоих)</p>
                     <button class="silver">КУПИТЬ СЕРЕБРЯНЫЙ СЕРТИФИКАТ</button>                    <p>Золотой – часовой полет для троих людей. Отличный вариант для семейных полетов.</p>
@@ -260,6 +260,22 @@
                     <input type="hidden" name="MNT_QUANTITY" value="1" />
                     <input type="submit" value="Купить" />
 
+                </fieldset>
+            </form>
+            <form name="48235_buyNow_simple_button" id="48235_buyNow_simple_button" action="https://www.moneta.ru/shopping-96412551.htm" target="_blank" method="post">
+                <fieldset>
+                    <input type="hidden" name="MNT_ITEM_ID" value="48235" />
+                    <input type="hidden" name="MNT_QUANTITY" value="1" />
+                    <input type="submit" value="Купить" />
+                    <!— дополнительные параметры —>
+                </fieldset>
+            </form>
+            <form name="48234_buyNow_simple_button" id="48234_buyNow_simple_button" action="https://www.moneta.ru/shopping-96412551.htm" target="_blank" method="post">
+                <fieldset>
+                    <input type="hidden" name="MNT_ITEM_ID" value="48234" />
+                    <input type="hidden" name="MNT_QUANTITY" value="1" />
+                    <input type="submit" value="Купить" />
+                    <!— дополнительные параметры —>
                 </fieldset>
             </form>
 
