--- a/assets/index.html
+++ b/assets/index.html
@@ -181,8 +181,8 @@
         <div class="how-match">
             <div class="back">
                 <div class="text-block">
-<!--                    <h2 id="howmatch">стоимость полета на воздушном шаре</h2>-->
-<!--                    <p><b>Для того чтобы совершить полет, нужно приобрести сертификат на полет. Выберите один из трех номиналов сертификата, который подходит именно вам:</b></p>-->
+                    <h2 id="howmatch">стоимость полета на воздушном шаре</h2>
+                    <p><b>Для того чтобы совершить полет, нужно приобрести сертификат на полет. Выберите один из трех номиналов сертификата, который подходит именно вам:</b></p>
 <!--                    <p>Экстрим – часовой индивидуальный полет для одного человека на спортивном аэростате.</p>-->
 <!--                    <p class="not-top">Стоимость – 17 000 р.</p>-->
 <!--                    <button class="bronze">КУПИТЬ ЭКСТРИМ СЕРТИФИКАТ</button>-->
