--- a/assets/index.html
+++ b/assets/index.html
@@ -12,6 +12,28 @@
     <title>Полеты на воздушном шаре - стоимость, фото | Легкие люди</title>
 </head>
 <body>
+    <div class="faded">
+    </div>
+<!--        криво назвал чтоб не лочили браузеры -->
+        <div class="baraner">
+            <div class="wrap">
+
+                <div class="text">
+                    <h2>Летай чаще</h2>
+                    <p>☀️Друзья, мы вообще за то, чтобы летать больше. Это же так здорово! Новые места, новые люди, новые впечатления!</p>
+                    <p>✈️Поэтому представляем летний безлимит на полеты в группах!</p>
+                    <p>С таким сертификатом можно участвовать хоть в каждом групповом полёте, которые мы организуем каждую неделю на протяжении всего лета.</p>
+                    <p>Для того чтобы стать нашим частым гостем, необходимо выкупить сертификат «летний безлимит» за 20000р и вписаться к нам чат, где вы останетесь до конца лета!</p>
+                    <p>Конечно нельзя передавать этот сертификат другим людям, неограниченное (🌦погодой разве что) количество полетов должен совершить сам владелец сертификата.</p>
+                    <p>P.S. Количество сертификатов ограниченно</p>
+                    <button class="unlim">КУПИТЬ безлимит</button>
+                </div>
+                <img src="./img/photobaraner.jpg" alt="" />
+                <div class="close"></div>
+            </div>
+        </div>
+
+    
     <div class="app">
     <menu>
         <div class="menu">
@@ -40,7 +62,7 @@
             </ul>
             <div class="wrap">
                 <img src="./img/phone_icon.png" alt="">
-                <div class="phone"><span>+7 903 326 5550</span></div>
+                <div class="phone"><span>+7(927) 883-04-44</span></div>
             </div>
         </div>
     </div>
@@ -278,7 +300,14 @@
                     <!— дополнительные параметры —>
                 </fieldset>
             </form>
-
+            <form name="48507_buyNow_simple_button" id="48507_buyNow_simple_button" action="https://www.moneta.ru/shopping-81782180.htm" target="_blank" method="post">
+                <fieldset>
+                    <input type="hidden" name="MNT_ITEM_ID" value="48507" />
+                    <input type="hidden" name="MNT_QUANTITY" value="1" />
+                    <input type="submit" value="Купить" />
+                    <!-- дополнительные параметры -->
+                </fieldset>
+            </form>
         </center>
     </div>
 <!--    <link rel="stylesheet" href="scss/css/lightbox.min.css">-->
