add href banner

--- a/assets/index.html
+++ b/assets/index.html
@@ -27,6 +27,7 @@
                     <p>Конечно нельзя передавать этот сертификат другим людям, неограниченное (🌦погодой разве что) количество полетов должен совершить сам владелец сертификата.</p>
                     <p>P.S. Количество сертификатов ограниченно</p>
                     <button class="unlim">КУПИТЬ безлимит</button>
+                    <a class="baraner-href" href="#howmatch">Смотреть другие программы полётов</a>
                 </div>
                 <img src="./img/photobaraner.jpg" alt="" />
                 <div class="close"></div>
@@ -208,6 +209,9 @@
 <!--                    <p>Экстрим – часовой индивидуальный полет для одного человека на спортивном аэростате.</p>-->
 <!--                    <p class="not-top">Стоимость – 17 000 р.</p>-->
 <!--                    <button class="bronze">КУПИТЬ ЭКСТРИМ СЕРТИФИКАТ</button>-->
+                    <p>Бронзовый – одно место, групповой часовой полет. С вами в корзине будут другие хорошие люди.</p>
+                    <p class="not-top">Стоимость  для детей 7-14 лет – 3500 р., для взрослых – 7000 р.</p>
+                    <button class="bronz">КУПИТЬ БРОНОЗОВЫЙ СЕРТИФИКАТ</button>
                     <p>Серебряный – индивидуальный часовой полет на двоих для настоящих романтиков!</p>
                     <p class="not-top">Стоимость – 25 000 р. (за двоих)</p>
                     <button class="silver">КУПИТЬ СЕРЕБРЯНЫЙ СЕРТИФИКАТ</button>                    <p>Золотой – часовой полет для троих людей. Отличный вариант для семейных полетов.</p>
