--- a/assets/index.html
+++ b/assets/index.html
@@ -210,7 +210,8 @@
 <!--                    <p class="not-top">Стоимость – 17 000 р.</p>-->
 <!--                    <button class="bronze">КУПИТЬ ЭКСТРИМ СЕРТИФИКАТ</button>-->
                     <p>Бронзовый – одно место, групповой часовой полет. С вами в корзине будут другие хорошие люди.</p>
-                    <p class="not-top">Стоимость  для детей 7-14 лет – 3500 р., для взрослых – 7000 р.</p>
+<!--                    для детей 7-14 лет – 3500 р., для взрослых-->
+                    <p class="not-top">Стоимость  – 7000 р.</p>
                     <button class="bronz">КУПИТЬ БРОНОЗОВЫЙ СЕРТИФИКАТ</button>
                     <p>Серебряный – индивидуальный часовой полет на двоих для настоящих романтиков!</p>
                     <p class="not-top">Стоимость – 25 000 р. (за двоих)</p>
@@ -253,7 +254,14 @@
     </div>
     <div class="hidden">
         <center>
-
+            <form name="39692_buyNow_simple_button" id="39692_buyNow_simple_button" action="https://www.moneta.ru/shopping-96412551.htm" target="_blank" method="post">
+                <fieldset>
+                    <input type="hidden" name="MNT_ITEM_ID" value="39692" />
+                    <input type="hidden" name="MNT_QUANTITY" value="1" />
+                    <input type="submit" value="Купить" />
+                    <!-- дополнительные параметры -->
+                </fieldset>
+            </form>
             <form name="33947_buyNow_simple_button" id="33947_buyNow_simple_button" action="https://www.moneta.ru/shopping-81782180.htm" target="_blank" method="post">
                 <fieldset>
                     <input type="hidden" name="MNT_ITEM_ID" value="33947">
