--- a/assets/index.html
+++ b/assets/index.html
@@ -15,24 +15,24 @@
     <div class="faded">
     </div>
 <!--        криво назвал чтоб не лочили браузеры -->
-        <div class="baraner">
-            <div class="wrap">
+<!--        <div class="baraner">-->
+<!--            <div class="wrap">-->
 
-                <div class="text">
-                    <h2>Летай чаще</h2>
-                    <p>☀️Друзья, мы вообще за то, чтобы летать больше. Это же так здорово! Новые места, новые люди, новые впечатления!</p>
-                    <p>✈️Поэтому представляем летний безлимит на полеты в группах!</p>
-                    <p>С таким сертификатом можно участвовать хоть в каждом групповом полёте, которые мы организуем каждую неделю на протяжении всего лета.</p>
-                    <p>Для того чтобы стать нашим частым гостем, необходимо выкупить сертификат «летний безлимит» за 20000р и вписаться к нам чат, где вы останетесь до конца лета!</p>
-                    <p>Конечно нельзя передавать этот сертификат другим людям, неограниченное (🌦погодой разве что) количество полетов должен совершить сам владелец сертификата.</p>
-                    <p>P.S. Количество сертификатов ограниченно</p>
-                    <button class="unlim">КУПИТЬ безлимит</button>
-                    <a class="baraner-href" href="#howmatch">Смотреть другие программы полётов</a>
-                </div>
-                <img src="./img/photobaraner.jpg" alt="" />
-                <div class="close"></div>
-            </div>
-        </div>
+<!--                <div class="text">-->
+<!--                    <h2>Летай чаще</h2>-->
+<!--                    <p>☀️Друзья, мы вообще за то, чтобы летать больше. Это же так здорово! Новые места, новые люди, новые впечатления!</p>-->
+<!--                    <p>✈️Поэтому представляем летний безлимит на полеты в группах!</p>-->
+<!--                    <p>С таким сертификатом можно участвовать хоть в каждом групповом полёте, которые мы организуем каждую неделю на протяжении всего лета.</p>-->
+<!--                    <p>Для того чтобы стать нашим частым гостем, необходимо выкупить сертификат «летний безлимит» за 20000р и вписаться к нам чат, где вы останетесь до конца лета!</p>-->
+<!--                    <p>Конечно нельзя передавать этот сертификат другим людям, неограниченное (🌦погодой разве что) количество полетов должен совершить сам владелец сертификата.</p>-->
+<!--                    <p>P.S. Количество сертификатов ограниченно</p>-->
+<!--                    <button class="unlim">КУПИТЬ безлимит</button>-->
+<!--                    <a class="baraner-href" href="#howmatch">Смотреть другие программы полётов</a>-->
+<!--                </div>-->
+<!--                <img src="./img/photobaraner.jpg" alt="" />-->
+<!--                <div class="close"></div>-->
+<!--            </div>-->
+<!--        </div>-->
 
     
     <div class="app">
