--- a/assets/index.html
+++ b/assets/index.html
@@ -12,8 +12,8 @@
     <title>Полеты на воздушном шаре - стоимость, фото | Легкие люди</title>
 </head>
 <body>
-    <div class="faded">
-    </div>
+<!--    <div class="faded">-->
+<!--    </div>-->
 <!--        криво назвал чтоб не лочили браузеры -->
 <!--        <div class="baraner">-->
 <!--            <div class="wrap">-->
