--- a/assets/index.html
+++ b/assets/index.html
@@ -12,27 +12,22 @@
     <title>Полеты на воздушном шаре - стоимость, фото | Легкие люди</title>
 </head>
 <body>
-<!--    <div class="faded">-->
-<!--    </div>-->
-<!--        криво назвал чтоб не лочили браузеры -->
-<!--        <div class="baraner">-->
-<!--            <div class="wrap">-->
-
-<!--                <div class="text">-->
-<!--                    <h2>Летай чаще</h2>-->
-<!--                    <p>☀️Друзья, мы вообще за то, чтобы летать больше. Это же так здорово! Новые места, новые люди, новые впечатления!</p>-->
-<!--                    <p>✈️Поэтому представляем летний безлимит на полеты в группах!</p>-->
-<!--                    <p>С таким сертификатом можно участвовать хоть в каждом групповом полёте, которые мы организуем каждую неделю на протяжении всего лета.</p>-->
-<!--                    <p>Для того чтобы стать нашим частым гостем, необходимо выкупить сертификат «летний безлимит» за 20000р и вписаться к нам чат, где вы останетесь до конца лета!</p>-->
-<!--                    <p>Конечно нельзя передавать этот сертификат другим людям, неограниченное (🌦погодой разве что) количество полетов должен совершить сам владелец сертификата.</p>-->
-<!--                    <p>P.S. Количество сертификатов ограниченно</p>-->
-<!--                    <button class="unlim">КУПИТЬ безлимит</button>-->
-<!--                    <a class="baraner-href" href="#howmatch">Смотреть другие программы полётов</a>-->
-<!--                </div>-->
-<!--                <img src="./img/photobaraner.jpg" alt="" />-->
-<!--                <div class="close"></div>-->
-<!--            </div>-->
-<!--        </div>-->
+    <div class="faded">
+    </div>
+<!--        криво назвал чтоб не лочили браузеры-->
+        <div class="baraner">
+            <div class="wrap">
+                <img src="./img/action2.jpg" alt="" />
+                <div class="text">
+                    <h2>Летай чаще</h2>
+                    <p>☀️Друзья, а у нас фестиваль на день города Йошкар-Олы с 5 по 11 августа! Мы будем летать над городом и рядом, постараемся сделать несколько общих стартов с городских площадок.</p>
+                    <p>✈️Чтобы совершить с нами полет на фестивале, нужен бронзовый сертификат для полёта в группе, который подорожает 1 августа до 8000р</p>
+                    <button class="bronz">КУПИТЬ Бронозвый сертификат</button>
+                    <a class="baraner-href" href="#howmatch">Смотреть другие программы полётов</a>
+                </div>
+                <div class="close"></div>
+            </div>
+        </div>
 
     
     <div class="app">
@@ -44,10 +39,12 @@
             </div>
             <div class="logo_small"></div>
             <div class="social">
+                <a href=""><span></span> </a>
+                <a href=""><span></span> </a>
                 <a target="_blanck" href="http://vk.com/legkie_lyudi"><span class="vk"></span></a>
-                <a target="_blanck" href="http://facebook.com/legkielyudi/"><span class="fb"></span></a>
+<!--                <a target="_blanck" href="http://facebook.com/legkielyudi/"><span class="fb"></span></a>-->
                 <a target="_blanck" href="http://youtube.com/channel/UCFt_NJlmjEm2vQf_DqBtRpw"><span class="youtube"></span></a>
-                <a target="_blanck" href="http://instagram.com/ll12ru/"><span class="insta"></span></a>
+<!--                <a target="_blanck" href="http://instagram.com/ll12ru/"><span class="insta"></span></a>-->
             </div>
             
         </div>
@@ -101,15 +98,15 @@
                 </div>
             </div>
         </div>
-        <div class="district">
-        <h2>РАЙОНЫ ПОЛЁТОВ</h2>
-            <p>Вы сами сможете выбрать, где мы полетим и что увидим. На выбор предлагается 4 района:
-            </p>
-            <p><span>- Йошкар-Ола (Марий Эл), </span>возможен старт практически из города. Полет проходит на максимальной высоте 2100 метров. Такие высотные полеты возможны только здесь из-за небольшой загруженности аэропорта. Извилистые русла рек, зеркала озер, а также сам город с его набережными – все это очень красиво с высоты!</p>
-            <p><span>- Казань (Татарстан), </span>всего 15-20 минут на запад от города. Это местность с интересным ландшафтом, холмами и долинами. Мы рассмотрим их с высоты 400 метров.</p>
-            <p><span>- Волжск (Марий Эл) или Зеленодольск (Татарстан)</span> – здесь и Волга, и озера Яльчик и Морской глаз, и красивые сосновые леса! Полет проходит на высоте 1200 метров. Из-за сложной инфраструктуры района полет может продолжаться меньше часа, но вы успеете налюбоваться уникальными красотами этой местности!</p>
-            <p><span> Чебоксары (Чувашия), Козьмодемьянск (Марий Эл)</span> – это просторы Волги и живописные холмы, самобытные деревушки по берегам.  Максимальная высота полета – 1200 метров.</p>
-        </div>
+<!--        <div class="district">-->
+<!--        <h2>РАЙОНЫ ПОЛЁТОВ</h2>-->
+<!--            <p>Вы сами сможете выбрать, где мы полетим и что увидим. На выбор предлагается 4 района:-->
+<!--            </p>-->
+<!--            <p><span>- Йошкар-Ола (Марий Эл), </span>возможен старт практически из города. Полет проходит на максимальной высоте 2100 метров. Такие высотные полеты возможны только здесь из-за небольшой загруженности аэропорта. Извилистые русла рек, зеркала озер, а также сам город с его набережными – все это очень красиво с высоты!</p>-->
+<!--            <p><span>- Казань (Татарстан), </span>всего 15-20 минут на запад от города. Это местность с интересным ландшафтом, холмами и долинами. Мы рассмотрим их с высоты 400 метров.</p>-->
+<!--            <p><span>- Волжск (Марий Эл) или Зеленодольск (Татарстан)</span> – здесь и Волга, и озера Яльчик и Морской глаз, и красивые сосновые леса! Полет проходит на высоте 1200 метров. Из-за сложной инфраструктуры района полет может продолжаться меньше часа, но вы успеете налюбоваться уникальными красотами этой местности!</p>-->
+<!--            <p><span> Чебоксары (Чувашия), Козьмодемьянск (Марий Эл)</span> – это просторы Волги и живописные холмы, самобытные деревушки по берегам.  Максимальная высота полета – 1200 метров.</p>-->
+<!--        </div>-->
         <div class="protect">
             <div class="back">
                 <div class="text-block">
@@ -174,19 +171,19 @@
     <section class="feedback">
         <h2>ОТЗЫВЫ</h2>
         <div class="block">
-            <p>16.06.2017, Мария Легкова:</p>
+            <p>16.06.2021, Мария Легкова:</p>
             <p>Плавали знаем! Спасибо "легким людям", в особенности пилоту Михаилу за такое незабываемое и увлекательное приключение. Все понравилось)))</p>
         </div>
         <div class="block">
-            <p>29.06.2017, Анна Дзиховская:</p>
+            <p>29.06.2021, Анна Дзиховская:</p>
             <p>Всем привет! Вчера я приняла участие в утреннем полёте и поэтому хочу написать отзыв . Если вы думаете , стоит все таки полетать или нет, то оставьте сомнения и вылетайте на шаре первым же рейсом !😉 полет это не страшно абсолютно , это очень круто , легко , а полученные кайфуши останутся в памяти на всю жизнь ! Организаторы полёта - Миша и Костя- большие молодцы и профессионалы своего дела, это видно как из организации процесса полёта, так и из отношения к участникам. Ни секунды не пожалела, всем очень рекомендую!!!</p>
         </div>
         <div class="block">
-            <p>24.09.2017, Ильнар Мунасыпов:</p>
+            <p>24.09.2022, Ильнар Мунасыпов:</p>
             <p>Новые Эмоции и необычные ощущения! Первый раз в вашем замечательном городе, первое знакомство с небом Йошкар -олы. Давно собирались полетать на шарике на самом деле. Спасибо Ильдару за помощь и Михаилу - пилоту шара за точную выброску!!!)) На самом деле хочется повторить в следующем году)</p>
         </div>
         <div class="block">
-            <p>8.06.2018, Татьяна Михайлова:</p>
+            <p>8.06.2022, Татьяна Михайлова:</p>
             <p>Привет! Так смешно сейчас вспоминать о своих страхах перед полетом))) Имея на руках бронзовый сертификат (результат розыгрыша от "Исполняем Желания" еще с октября!) решилась только вчера на этот шаг. Плавный взлет заставил позабыть обо всем. Пока любовались радугой на горизонте, внизу уже леса и дома остались далеко... Все так романтично!!! Особенно понравилось приближение к верхушкам деревьев, их реально можно "погладить рукой"! Удивляет также профессионализм организаторов - мы летали в прямом смысле между тучками, но нам светило солнышко))) Настроение после полета отличное!!! Люди и правда ЛЕГКИЕ! И огромное спасибо за полет!!!</p>
         </div>
     </section>
@@ -198,6 +195,9 @@
                     <h2>У МЕНЯ ЕСТЬ СЕРТИФИКАТ!</h2>
                     <p>Поздравляем! Вас ждет незабываемое приключение!</p>
                     <p>В первую очередь вам нужно договориться о дате полета – позвонить или написать пилоту или координатору. (Обратите внимание, что дата может быть уже занята, обычно выходные забронированы уже в начале недели).  Вместе мы выберем удобный день, учитывая при этом погодные условия. Мы, к сожалению, не можем повлиять на атмосферные  условия, и если они подведут, придется выбрать другую дату. Ваш полет обязательно состоится при отличной погоде!</p>
+                    <div class="phone">
+                        <a title="Whatsapp" href="whatsapp://send?phone=79278830444" >📱 +7(927) 883-04-44</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -211,7 +211,7 @@
 <!--                    <button class="bronze">КУПИТЬ ЭКСТРИМ СЕРТИФИКАТ</button>-->
                     <p>Бронзовый – одно место, групповой часовой полет. С вами в корзине будут другие хорошие люди.</p>
 <!--                    для детей 7-14 лет – 3500 р., для взрослых-->
-                    <p class="not-top">Стоимость  – 7000 р.</p>
+                    <p class="not-top">Стоимость  – 7000 р. Подорожает с 1 августа до 8000 р.</p>
                     <button class="bronz">КУПИТЬ БРОНОЗОВЫЙ СЕРТИФИКАТ</button>
                     <p>Серебряный – индивидуальный часовой полет на двоих для настоящих романтиков!</p>
                     <p class="not-top">Стоимость – 25 000 р. (за двоих)</p>
@@ -225,7 +225,7 @@
                     <p class="not-top">Стоимость – 48 000 р. (аренда всей корзины на час)</p>
                     <button class="diamond">КУПИТЬ БРИЛИАНТОВЫЙ СЕРТИФИКАТ</button>
                     <p>Бриллиантовый – часовой полет на 12 человек.</p>
-                    <p class="not-top">Стоимость – 72 000 р. (аренда всей корзины на час)</p>
+                    <p class="not-top">Стоимость – 60 000 р. (аренда всей корзины на час)</p>
                     <button class="corporat">КУПИТЬ КОРПОРАТИВНЫЙ СЕРТИФИКАТ</button>
                     <p><span class="warning">Важно!</span> Приобретая серебряный или золотой сертификат, вы подтвержтаете, что ознакомлены и согласны с <a class="regulations" href="tipovoy_dogovor.doc" target="blanck" >правилами</a> его использования.</p>
                     <p><b>Дарите эмоции – это бесценно!</b></p>
@@ -242,11 +242,11 @@
             <p>Небо ждет Вас! Затаите дыхание...</p>
             <ul>
                 <li class='vk'><a href="http://vk.com/legkie_lyudi" target="_blanck">        vk.com/legkie_lyudi</a></li>
-                <li class='phone'><a href=""> 📱8(8362)330-444 Йошкар-Ола
-                    📱+79379300215 Чебоксары
-                    📱+79221423722 Казань</a></li>
+                <li class='phone'><a href="tel:+88362330444"> 📱8(8362) 330 - 444 Йошкар-Ола</a></li>
+                <li class='phone'><a href="tel:+79221423722"> 📱+7(922) 142 37 - 22 Казань</a></li>
+<!--                    📱+79379300215 Чебоксары-->
                 <li class='mail'><a href="">    midobriy@gmail.com</a></li>
-                <li class='insta'><a href="http://instagram.com/ll12ru/" target="_blanck">  @ll12ru</a></li>
+<!--                <li class='insta'><a href="http://instagram.com/ll12ru/" target="_blanck">  @ll12ru</a></li>-->
             </ul>
             <div class="copirate">ООО "Клуб воздухоплавателей "Легкие люди" / ОГРН 1141215009286 / ИНН 1215185402 / КПП 121501001 / г. Йошкар-Ола, переулок Ладыгина д.6 / Тел.: +7 (922) 142 37 22 </div>
         </div>
