--- a/assets/index.html
+++ b/assets/index.html
@@ -223,7 +223,7 @@
                     <p>Бриллиантовый – часовой полет для шестерых людей.</p>
                     <p class="not-top">Стоимость – 60 000 р. (аренда всей корзины на час)</p>
                     <button class="diamond">КУПИТЬ БРИЛИАНТОВЫЙ СЕРТИФИКАТ</button>
-                    <p>Бриллиантовый – часовой полет на 12 человек.</p>
+                    <p>Корпоративный – часовой полет на 12 человек.</p>
                     <p class="not-top">Стоимость – 72 000 р. (аренда всей корзины на час)</p>
                     <button class="corporat">КУПИТЬ КОРПОРАТИВНЫЙ СЕРТИФИКАТ</button>
                     <p><span class="warning">Важно!</span> Приобретая серебряный или золотой сертификат, вы подтвержтаете, что ознакомлены и согласны с <a class="regulations" href="tipovoy_dogovor.doc" target="blanck" >правилами</a> его использования.</p>
